--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "ng-dialog": "^1.4.0",
     "angular-tooltips": "^1.2.2",
     "angular-loading-bar": "^0.9.0",
-    "angular-animate": "^1.6.9"
+    "angular-animate": "^1.6.9",
+    "angular-moment": "^1.2.0"
   }
 }
