--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
     "jquery": "^3.2.1",
     "bootstrap": "v4.0.0-beta",
     "components-font-awesome": "^4.7.0",
-    "sweetalert": "^2.1.0",
     "angular": "^1.6.6",
     "angular-ui-router": "^1.0.12",
     "angularfire": "^2.3.0",
@@ -22,6 +21,7 @@
     "angular-tooltips": "^1.2.2",
     "angular-loading-bar": "^0.9.0",
     "angular-animate": "^1.6.9",
-    "angular-moment": "^1.2.0"
+    "angular-moment": "^1.2.0",
+    "sweetalert2": "^7.18.0"
   }
 }
