--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "angular-loading-bar": "^0.9.0",
     "angular-animate": "^1.6.9",
     "angular-moment": "^1.2.0",
-    "sweetalert2": "^7.18.0"
+    "sweetalert2": "^7.18.0",
+    "angular-chart.js": "^1.1.1",
+    "chart.js": "^2.7.2"
   }
 }
